home/kkleine/dev/lkml/0/11010.6bde1d505b000c3180d5b2b582b3f5f0fd42f331
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#36: 
>> include/linux/freezer.h:9: error: dereferencing pointer to incomplete type

WARNING:TYPO_SPELLING: 'nessecary' may be misspelled - perhaps 'necessary'?
#60: 
the direct include of sched.h in most drivers was/is not nessecary.
                                                         ^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:SPDX_LICENSE_TAG: Missing or malformed SPDX-License-Identifier tag in line 1
#103: FILE: include/linux/freezer.h:1:
+#include <linux/sched.h>

The source file is missing or has an improper SPDX identifier tag.
The Linux kernel requires the precise SPDX identifier in all source files,
and it is thoroughly documented in the kernel docs.

See: https://www.kernel.org/doc/html/latest/process/license-rules.html

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.11010.commit.6bde1d505b000c3180d5b2b582b3f5f0fd42f331 total: 0 errors, 3 warnings, 0 checks, 4 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.11010.commit.6bde1d505b000c3180d5b2b582b3f5f0fd42f331 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
